cmake_minimum_required(VERSION 3.10)

include(CTest)

add_executable(test_timeline_helpers test_timeline_helpers.c)
add_executable(test_pairing_heap test_pairing_heap.c)
add_executable(test_runtime_basic test_runtime_basic.c)
add_executable(test_two_threads_basic test_two_threads_basic.c)
add_executable(test_basic_scaling test_basic_scaling.c)
add_executable(test_basic_jumps test_basic_jumps.c)
target_link_libraries(test_runtime_basic PRIVATE chronos)
target_link_libraries(test_two_threads_basic PRIVATE chronos)
target_link_libraries(test_basic_scaling PRIVATE chronos)
target_link_libraries(test_basic_jumps PRIVATE chronos)

add_test(NAME timeline_helpers COMMAND test_timeline_helpers)
add_test(NAME pairing_heap COMMAND test_pairing_heap)
add_test(NAME runtime_basic COMMAND test_runtime_basic)
add_test(NAME two_threads_basic COMMAND test_two_threads_basic)
add_test(NAME basic_scaling COMMAND test_basic_scaling)
add_test(NAME basic_jumps COMMAND test_basic_jumps)
